# double-sided-qr-code

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  RS.hpp  build_qr_code.hpp  crc.hpp  index.html  logger.hpp  main.cpp  makeseg.hpp  qr_constants.hpp  qrgen.js  qrgen.wasm  reed_solomon_helper.hpp  save_matrix.hpp  showMatrix.hpp
